# pyinnodb

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-and-release-uv.yaml  hello.yaml  python-app.yaml  version-uv.yaml  version.yaml
.github/workflows/backup/: hello
arts/: README.md
data/: gen-collation.py  make_data.py  t1.ibd  t2.ibd
devtools/: create_data.py  create_instant_table.py  create_table.py  deploy_mysqld.py  gen-collations.py  start_container.py
mysql_conf/: my.cnf
pyinnodb/cli/: -w  __main__.py  sql.py  static_usage.py
pyinnodb/const/: __init__.py  collations.py
pyinnodb/disk_struct/: __init__.py  fil.py  fsp.py  index.py  record.py
pyinnodb/mconstruct/: __init__.py  adaptor.py
pyinnodb/struct/: __init__.py  deplicate.py  fil.py  fsp.py  ibuf.py  index.py  inode.py  list.py  meta.py  metaclass.py  newmeta.py  record.py  xdes.py
src/pyinnodb/: color.py  treeascii.py
src/pyinnodb/cli/: __init__.py  __main__.py  frm.py  iter_record.py  main.py  parse.py  sdi.py  sql.py  static_usage.py  systab.py  undo.py  validate.py
src/pyinnodb/const/: __init__.py  column_hidden_type.py  dd_column_type.py  define.py  index_type.py  partition.py  tool.py  undo.py  util.py
src/pyinnodb/disk_struct/: cfg.py  data.py  first_page.py  fsp.py  ibuf.py  index.py  inode.py  json.py  list.py  record.py  redo_log.py  rollback.py  trx.py  undo_log.py  varsize.py  xdes.py
src/pyinnodb/frm/: frm.py
src/pyinnodb/mconstruct/: __init__.py  adaptor.py
src/pyinnodb/sdi/: column.py  table.py  util.py
tests/: containerOp.py  context.py  pytest.ini  test.py  test_all.py  test_container.py  test_dc.py  test_delete.py  test_fil.py  test_fsp.py  test_func.py  test_ibuf.py  test_index.py  test_inode.py  test_instant.py  test_int.py  test_json.py  test_list.py  test_parse.py  test_record.py  test_sdi.py  test_src.py  test_undo.py  test_xdes.py
