[project]
name = "pyinnodb"
version = "0.1.0"
description = "A parser for InnoDB file formats, in Python"
authors = [
    { name = "WinChua", email = "winchua@foxmail.com" }
]
dependencies = [
    "crcmod>=1.7",
    "construct==2.10.68",
    "construct-typing>=0.6.2",
    "click>=8.1.7",
    "sqlalchemy>=2.0.28",
    "pymysql>=1.1.0",
    "cryptography>=42.0.5",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "testcontainers>=4.1.1",
    "docker>=7.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyinnodb"]

[tool.hatch.build]
exclude = [".venv", "data"]

[tool.rye.scripts]
gencols = { chain = ["gencols:cols", "gencols:fmt"] }
"gencols:cols" = "python devtools/gen-collations.py"
"gencols:fmt" = "rye fmt src/pyinnodb/const/collations.py"
cli = { call = "pyinnodb.cli" }


