[project]
name = "pyinnodb"
version = "0.1.0"
description = "A parser for InnoDB file formats, in Python"
authors = [
    { name = "WinChua", email = "winchua@foxmail.com" }
]
dependencies = [
    "crcmod>=1.7",
    "pyelftools>=0.31",
    "construct==2.10.68",
    "construct-typing>=0.6.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyinnodb"]
